Refactor Auth & Register Controller
